2025/k8s_study/my-env/pod-yaml/echo-hname-67548d9ccc-cnhtg.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2025-03-22T11:26:55Z"
  generateName: echo-hname-67548d9ccc-
  labels:
    app: nginx
    pod-template-hash: 67548d9ccc
  name: echo-hname-67548d9ccc-cnhtg
  namespace: default
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: ReplicaSet
    name: echo-hname-67548d9ccc
    uid: e5cd9f19-c836-4006-bc2e-148479a75bf0
  resourceVersion: "4736"
  uid: eff3b6d7-c002-4851-adef-dfb479c73377
spec:
  containers:
  - image: sysnet4admin/echo-hname
    imagePullPolicy: Always
    name: echo-hname
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-npd4z
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: desktop-worker
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: kube-api-access-npd4z
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2025-03-22T11:27:11Z"
    status: "True"
    type: PodReadyToStartContainers
  - lastProbeTime: null
    lastTransitionTime: "2025-03-22T11:26:55Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2025-03-22T11:27:11Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2025-03-22T11:27:11Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2025-03-22T11:26:55Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: containerd://8d4289d327c03b1b2849ebed180505e2c18423d224f2183a307b287325b501f3
    image: docker.io/sysnet4admin/echo-hname:latest
    imageID: docker.io/sysnet4admin/echo-hname@sha256:6df896ded565cab71562ccbafc2be6d830c92391f021343d5f1dff7f9a727bce
    lastState: {}
    name: echo-hname
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2025-03-22T11:27:11Z"
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-npd4z
      readOnly: true
      recursiveReadOnly: Disabled
  hostIP: 172.18.0.2
  hostIPs:
  - ip: 172.18.0.2
  phase: Running
  podIP: 10.244.1.2
  podIPs:
  - ip: 10.244.1.2
  qosClass: BestEffort
  startTime: "2025-03-22T11:26:55Z"
