2025/k8s_study/my-env/pod-yaml/echo-hname.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: echo-hname
  labels:
    app: nginx 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx 
  template:
    metadata:
      labels:
        app: nginx 
    spec:
      containers:
      - name: echo-hname 
        image: sysnet4admin/echo-hname
